--- a/Front-End-Projects/html-css-js-intro/index.html
+++ b/Front-End-Projects/html-css-js-intro/index.html
@@ -3,24 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="htmp introduction">
-    <title>Document</title>
+    <meta name="description" content="html introduction">
+    <title>Traffic Light States Machine</title>
+    <!-- Подключение файла стилей -->
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div style="background-color: antiquewhite;">
-        Hello World!
-    </div>
-    <span style="background-color: antiquewhite;">
-        Hello World!<br>
-    </span>
-    <mark style="background-color: antiquewhite;">
-        Hello World!
-    </mark>
-    <p>
-        Hello World!<br>
-        <mark>
-            Hello World!
-        </mark>
-    </p>
+    <!-- Красный свет светофора -->
+    <div class="trafficLight trafficLight-red" id="red"></div>
+    <!-- Желтый свет светофора -->
+    <div class="trafficLight" id="yellow"></div>
+    <!-- Зеленый свет светофора -->
+    <div class="trafficLight" id="green"></div>
+    <!-- Скрипт с логикой переключения состояния светофора -->
+    <script src="./src/main.js"></script>
 </body>
 </html>
