--- a/Front-End-Projects/html-css-js-intro/index.html
+++ b/Front-End-Projects/html-css-js-intro/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traffic Light</title>
-    <link rel="stylesheet" href="/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChessBoard</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="trafficLight" id="red"></div>
-    <div class="trafficLight" id="yellow"></div>
-    <div class="trafficLight" id="green"></div>
-    <script src="./src/main.js"></script>
+  <div class="chessboard"></div>
+  <script src="src/main.js"></script>
 </body>
 </html>
