Areas work, but just when alone

--- a/Front-End-Projects/html-css-js-intro/Areas/index.html
+++ b/Front-End-Projects/html-css-js-intro/Areas/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Шахматная доска</title>
-  <link rel="stylesheet" href="/Grid/css/styles.css">
+  <title>Динамическая таблица</title>
+  <link rel="stylesheet" href="/Areas/css/styles.css">
 </head>
-<body class="grid-page">
-  <!-- Контейнер для шахматной доски -->
-  <div class="grid-container">
-    <div class="chessboard"></div>
+<body>
+  <div class="content">
+    <table id="dynamic-table"></table>
   </div>
+  <script src="/Areas/src/script.js" defer></script>
 </body>
 </html>
