--- a/Front-End-Projects/html-css-js-intro/index.html
+++ b/Front-End-Projects/html-css-js-intro/index.html
@@ -9,26 +9,27 @@
 </head>
 <body>
 
-<!-- Верхняя полоса (меню) -->
-<header class="top-bar">
-  <div id="top-menu">
-    <button class="menu-btn" onclick="loadPage('Flex/index.html')">Flex</button>
-    <button class="menu-btn" onclick="loadPage('Grid/index.html')">Grid</button>
-    <button class="menu-btn" onclick="loadPage('Areas/index.html')">Areas</button>
-  </div>
-</header>
+  <!-- Верхняя полоса (меню) -->
+  <header class="top-bar">
+    <div id="top-menu">
+      <button class="menu-btn" onclick="loadPage('Flex/index.html')">Flex</button>
+      <button class="menu-btn" onclick="loadPage('Grid/index.html')">Grid</button>
+      <button class="menu-btn" onclick="loadPage('Areas/index.html')">Areas</button>
+      <button class="menu-btn" onclick="loadPage('life-game-states-matrix/index.html')">liveGame</button>
+    </div>
+  </header>
 
-<!-- Центральная область -->
-<main>
-  <div id="content-placeholder">
-    <!-- Стартовый контент -->
-  </div>
-</main>
+  <!-- Центральная область -->
+  <main>
+    <div id="content-placeholder">
+      <!-- Стартовый контент -->
+    </div>
+  </main>
 
-<!-- Нижняя полоска (надпись) -->
-<footer class="bottom-bar">
-  <p class="created-by">created by Z0kmer</p>
-</footer>
+  <!-- Нижняя полоска (надпись) -->
+  <footer class="bottom-bar">
+    <p class="created-by">created by Z0kmer</p>
+  </footer>
 
 </body>
 </html>
