--- a/Front-End-Projects/html-css-js-intro/index.html
+++ b/Front-End-Projects/html-css-js-intro/index.html
@@ -23,6 +23,8 @@
   <main>
     <div id="content-placeholder">
       <!-- Стартовый контент -->
+      <p class="welcome">Добро пожаловать.<br>Выберите, что вам интересно.</p>
+      <img src="welcome.jpg" alt="Welcome Image" class="welcome-img">
     </div>
   </main>
 
