--- a/Front-End-Projects/html-css-js-intro/Media/index.html
+++ b/Front-End-Projects/html-css-js-intro/Media/index.html
@@ -35,7 +35,7 @@
         <!-- Окно просмотра -->
         <div class="image-container" onclick="changeImage('images/img05.jpeg', 'txt/img05.txt')">
             <img id="main-image" src="images/img05.jpeg" alt="Главное изображение">
-            <div class="image-title-box">Human</div>
+            <div class="image-title-box"></div>
             <div class="hover-text">
                 <p id="image-text"></p>
             </div>
