--- a/Front-End-Projects/html-css-js-intro/Media/index.html
+++ b/Front-End-Projects/html-css-js-intro/Media/index.html
@@ -13,33 +13,39 @@
     <img src="images/logo.jpeg" alt="Логотип" class="logo">
   </header>
 
-  <div class="container">
+  <!-- Контейнер галереи с id для управления состоянием просмотра -->
+  <div class="container" id="gallery-container">
+    <!-- Блок миниатюр -->
     <div class="thumbnails">
-      <div class="thumbnail" onclick="changeImage('images/img01.jpeg', 'txt/img01.txt')">
+      <div class="thumbnail" onclick="showViewer(); changeImage('images/img01.jpeg', 'txt/img01.txt')">
         <img src="images/img01.jpeg" alt="Картинка 1">
         <div class="title">Ork</div>
       </div>
-      <div class="thumbnail" onclick="changeImage('images/img02.jpeg', 'txt/img02.txt')">
+      <div class="thumbnail" onclick="showViewer(); changeImage('images/img02.jpeg', 'txt/img02.txt')">
         <img src="images/img02.jpeg" alt="Картинка 2">
         <div class="title">Troll</div>
       </div>
-      <div class="thumbnail" onclick="changeImage('images/img03.jpeg', 'txt/img03.txt')">
+      <div class="thumbnail" onclick="showViewer(); changeImage('images/img03.jpeg', 'txt/img03.txt')">
         <img src="images/img03.jpeg" alt="Картинка 3">
         <div class="title">Elf</div>
       </div>
-      <div class="thumbnail" onclick="changeImage('images/img04.jpeg', 'txt/img04.txt')">
+      <div class="thumbnail" onclick="showViewer(); changeImage('images/img04.jpeg', 'txt/img04.txt')">
         <img src="images/img04.jpeg" alt="Картинка 4">
         <div class="title">Dwarf</div>
       </div>
     </div>
 
-    <!-- Окно просмотра -->
-    <div class="image-container" onclick="changeImage('images/img05.jpeg', 'txt/img05.txt')">
-      <img id="main-image" src="images/img05.jpeg" alt="Главное изображение">
-      <div class="image-title-box"></div>
-      <div class="hover-text">
-        <p id="image-text">...</p>
+    <!-- Область просмотра -->
+    <div class="viewer-wrapper">
+      <div class="image-container" id="viewer" onclick="changeImage('images/img05.jpeg', 'txt/img05.txt')">
+        <img id="main-image" src="images/img05.jpeg" alt="Главное изображение">
+        <div class="image-title-box"></div>
+        <div class="hover-text">
+          <p id="image-text">...</p>
+        </div>
       </div>
+      <!-- Кнопка закрытия, расположенная рядом с областью просмотра -->
+      <button class="close-btn" onclick="hideViewer()">Закрыть</button>
     </div>
   </div>
 
