--- a/Front-End-Projects/html-css-js-intro/Media/index.html
+++ b/Front-End-Projects/html-css-js-intro/Media/index.html
@@ -44,8 +44,7 @@
           <p id="image-text">...</p>
         </div>
       </div>
-      <!-- Кнопка закрытия, расположенная рядом с областью просмотра -->
-      <button class="close-btn" onclick="hideViewer()">Закрыть</button>
+      <button class="close-btn" onclick="hideViewer()">x</button>
     </div>
   </div>
 
